Fixed a segfault `GC.verify_compaction_references`

Which is by coercion of `Qundef`, when any keyword argument
without `toward:` option is given.  [Bug #16598]